mood flow screen fixes: add icon and delete useless function (#18)
* feat frontend: fix jwt

* feat frontend: small fixes

* feat frontend: fix backend handling

* feat frontend: feat frontend: fix backend handling

* fix mongo

* fix mongo stashed

* fixes for gpt summary

* feat frontend: small ui fixes

* feat frontend: add regenerated question

* update data model

* add all day report function

* add random question to mf

* add safety to stats methods

* add daily activity into data model

* add getUserDailyMood func realisation

* fix date passing

* format stats service for better readability

* add survey summary field

* data model fix

* add short form saving

* fix fails in mf

* fix random question

* fix daily mood smile

---------

Co-authored-by: sssi111 <gooday358@gmail.com>